fix: drop tables engage for every tool, restart warning gone, gradient console lines, benchmark refresh